Bug 123032 - Shape jumps after inserting over chart in DOCX, and moving it
Summary: Shape jumps after inserting over chart in DOCX, and moving it
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2019-01-29 10:55 UTC by Aron Budea
Modified: 2019-03-14 20:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-01-29 10:55:09 UTC
This is somewhat of a follow-up to bug 122942.

- Open any DOCX file (eg. an empty one),
- Insert a chart,
- Click away to get out of chart editing,
- Choose a shape for insertion, and insert it over the chart.
- Move the shape.

=> Shape jumps upwards.

Observed using LO 6.3.0.0.alpha0+ (76c7a6c39d769cb9bdb9b951d9f95507c0139372) / Windows 7.
No issue with LO 5.1.0.3.
=> regression

This bug didn't occur before the following commit, either (from which bug 122942 regressed). Adding Cc: to Miklos Vajna, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=50223ea6e212b60b7d33839c2753c5601fb50f95
author		Miklos Vajna <vmiklos@collabora.co.uk>	2016-03-31 15:05:48 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-03-31 17:49:00 +0000

"tdf#98987 sw: add AddVerticalFrameOffsets compat mode"


In fact, the bug can be observed even before commit 4218caf142a7ecac34548c6d38c6f6fbebb898b9 (bug 122942's fix), just then it jumps upwards from the incorrect insertion point, to the intended one. Perhaps that offset remained after the fix.
Comment 1 Xisco Faulí 2019-01-30 11:45:58 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: f1f84cf7fae3c777908cfc5357a067db731367ac
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Miklos Vajna 2019-02-06 17:32:33 UTC
I'll look at this.
Comment 3 Commit Notification 2019-02-07 11:25:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/961ba62df045473e5793d9e103be86eaad8d9575%5E%21

tdf#123032 sw, AddVerticalFrameOffsets: fix shape pos after mouse move

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Aron Budea 2019-02-07 17:20:15 UTC
Verified, thanks for the fix, Miklos!

6.3.0.0.alpha0+ (17e5028044edef2b959b73ce1dbe2c9627d1a799) / Ubuntu 18.04.